--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -43,7 +43,8 @@ html lang="en-US"
     = javascript_include_tag 'support/jquery-1.6.2.min'
     = render 'shared/jquery-auth-patch'
 
-    = javascript_include_tag 'support/jquery-ui-1.8.13.custom.min'
+    / = javascript_include_tag 'support/jquery-ui-1.8.13.custom.min'
+    = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js'
     = javascript_include_tag 'support/jquery.tooltip.v.1.1'
     = javascript_include_tag 'support/dbx'
     = javascript_include_tag 'support/underscore'
