--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -364,6 +364,23 @@ p.success {
 }
 
 
+ul.fancy-selectable {
+  background: #fff;
+  border: 1px solid #b3b3b3;
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  li {
+    padding: 0;
+    border: 1px solid #b3b3b3;
+    margin-bottom: 4px;
+    cursor: pointer;
+  }
+  li.ui-selecting { background: #FECA40; }
+  li.ui-selected { background: #F39814; color: white; }
+}
+
+
 .social-share {
   margin: 0;
   padding: 0 0 0 0;
