--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -420,8 +420,7 @@ p {
   .name {
     float: left;
     width: 97%;
-    font-size: 16px;
-    font-weight: bold; }
+    font-size: 16px; }
   .name.long {
     width: 100%;
     padding: 0 0 8px 0; }
