Updated layout of list views

--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -24,7 +24,7 @@ ul.fancy-selectable {
 
 h2.active-site {
   margin: 0;
-  padding: 10px;
+  padding: 10px 10px 10px 20px;
   border-bottom: 1px solid #b3b3b3;
 }
 
@@ -32,10 +32,13 @@ h2.active-site {
   float: left;
   width: 360px;
   margin: 20px;
+  ul.sites {
+    height:400px;
+    overflow:auto;
+  }
 }
 
 .sites {
-
   img.site-pic {
     vertical-align: middle;
   }
@@ -48,7 +51,7 @@ h2.active-site {
   border-left: 1px solid #B3B3B3;  
   .signup-key {}
   ul.admins {
-    height: 230px;
+    height: 327px;
     overflow: auto;
     margin-top: 20px;
     width: 500px;
