--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -8,7 +8,8 @@ window.g = {
   topBarMaxHeight: <%= @is_preview_mode ? 125 : 256 %>,
   couchLocation: '<%=escape_javascript @company.couch_host %>',
   db_name: '<%=escape_javascript @company.db_name %>',
-  company: '<%=escape_javascript @company.name %>'
+  company: '<%=escape_javascript @company.name %>',
+  isPreview: <%= @is_preview_mode.present? %>
 };
 window.widgetClasses = {};
 window.widgetPages = {};
