Updated UI for collection type widget editor

--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -469,7 +469,7 @@ div.wysiwyg ul.toolbar {
 
 #builder .edit-area.category .controls .button, #builder .edit-area.page_tree .controls .button {
   height: 22px;
-  padding: 6px 6px 0 20px;
+  padding: 6px 6px 0 24px;
   margin: 0 4px 8px 0;
   border: 1px solid #b3b3b3;
   background: url(/images/ui/plus.png) 3px 5px no-repeat;
@@ -482,6 +482,24 @@ div.wysiwyg ul.toolbar {
   border-color: #324774; }
 #builder .edit-area.category .button.back, #builder .edit-area.page_tree .button.back {
   background-image: url(/images/ui/back-btn.png); }
+#builder .edit-area.category .button.separator, #builder .edit-area.page_tree .button.separator {
+  margin-top: 1px;
+  padding: 3px 1px;
+  border: none;
+  background: gray; }
+#builder .edit-area.category .button.add-cat, #builder .edit-area.page_tree .button.add-cat {
+  background-image: url(http://local.host/icon-folder-new.png); }
+#builder .edit-area.category .button.add-item, #builder .edit-area.page_tree .button.add-item {
+  background-image: url(http://local.host/icon-item-new.png); }
+#builder .edit-area.category .button.rename, #builder .edit-area.page_tree .button.rename {
+  background-image: url(http://local.host/icon-rename.png);
+  background-position: center; }
+#builder .edit-area.category .button.edit, #builder .edit-area.page_tree .button.edit {
+  background-image: url(http://local.host/icon-edit.png);
+  background-position: center; }
+#builder .edit-area.category .button.delete, #builder .edit-area.page_tree .button.delete {
+  background-image: url(http://local.host/icon-delete.png);
+  background-position: center; }
 #builder .edit-area.category ul.fancy-selectable, #builder .edit-area.page_tree ul.fancy-selectable {
   height: 290px;
   overflow: auto; }
@@ -490,7 +508,7 @@ div.wysiwyg ul.toolbar {
   padding: 6px 6px 0px 6px;
   cursor: move; }
 #builder .edit-area.category .nodes .icon, #builder .edit-area.page_tree .nodes .icon {
-  height: 26px;
+  height: 24px;
   width: 16px;
   padding-left: 6px;
   float: left;
@@ -504,9 +522,10 @@ div.wysiwyg ul.toolbar {
   white-space: no-wrap;
   border-right: 1px solid #b3b3b3; }
 #builder .edit-area.category .nodes .icon.cat, #builder .edit-area.page_tree .nodes .icon.cat {
-  background-image: url(/images/ui/help-bubble.png); }
+  background-image: url(http://local.host/icon-folder.png); }
 #builder .edit-area.category .nodes .icon.page, #builder .edit-area.category .nodes .icon.item, #builder .edit-area.page_tree .nodes .icon.page, #builder .edit-area.page_tree .nodes .icon.item {
-  background-image: url(/images/ui/plus.png); }
+  background-image: url(http://local.host/icon-item.png);
+  background-position: 3px 6px; }
 #builder .edit-area.category .icon-wrap, #builder .edit-area.page_tree .icon-wrap {
   padding: 0 5px 0 0; }
   #builder .edit-area.category .icon-wrap img, #builder .edit-area.page_tree .icon-wrap img {
