--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -524,14 +524,15 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
     .controls
       / For icon-only buttons, you need = ""
       .button.back title="Go Back" = ""
-      .button-divider.lfloat
+      .button.separator
       .button.add-cat Add {{ catLabel }}
       .button.add-item Add {{ itemLabel }}
 
       | <% if (isThereStuff == true) { %>
-      .button.rename title="Rename" R
-      .button.edit title="Edit" E
-      .button.delete title="Delete" D
+      .button.separator
+      .button.rename title="Rename" &nbsp;
+      .button.edit title="Edit" &nbsp;
+      .button.delete title="Delete" &nbsp;
       | <% } %>
 
       .clearfix
