--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -526,7 +526,7 @@ div.wysiwyg ul.toolbar {
   }
   .controls .button {
     height: 22px;
-    padding: 6px 6px 0 20px;
+    padding: 6px 6px 0 24px;
     margin: 0 4px 8px 0;
     border: 1px solid #b3b3b3;
     background: url(/images/ui/plus.png) 3px 5px no-repeat;
@@ -537,7 +537,34 @@ div.wysiwyg ul.toolbar {
   .controls .button:hover {
     border-color: #324774;
   }
-  .button.back { background-image: url(/images/ui/back-btn.png); }
+
+  .button.back { 
+    background-image: url(/images/ui/back-btn.png); 
+  }
+  .button.separator {
+    margin-top: 1px;
+    padding: 3px 1px;
+    border: none;
+    background: gray;
+  }
+  .button.add-cat { 
+    background-image: url(/images/ui/icon-folder-new.png);
+  }
+  .button.add-item { 
+    background-image: url(/images/ui/icon-item-new.png); 
+  }
+  .button.rename { 
+    background-image: url(/images/ui/icon-rename.png); 
+    background-position: center;
+  }
+  .button.edit { 
+    background-image: url(/images/ui/icon-edit.png); 
+    background-position: center;
+  }
+  .button.delete { 
+    background-image: url(/images/ui/icon-delete.png); 
+    background-position: center;
+  }
 
   ul.fancy-selectable {
     height: 290px;
@@ -550,7 +577,7 @@ div.wysiwyg ul.toolbar {
       cursor: move;
     }
     .icon {
-      height: 26px;
+      height: 24px;
       width: 16px;
       padding-left: 6px;
       float: left;
@@ -567,10 +594,11 @@ div.wysiwyg ul.toolbar {
     }
 
     .icon.cat {
-      background-image: url(/images/ui/help-bubble.png);
+      background-image: url(/images/ui/icon-folder.png);
     }
     .icon.page, .icon.item {
-      background-image: url(/images/ui/plus.png);
+      background-image: url(/images/ui/icon-item.png);
+      background-position: 3px 6px;
     }
   }
 
