Updated the toolbar in the collection widgets

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -524,12 +524,12 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
     .controls
       / For icon-only buttons, you need = ""
       .button.back title="Go Back" = ""
-      .button.separator
+      .button-separator
       .button.add-cat Add {{ catLabel }}
       .button.add-item Add {{ itemLabel }}
 
       | <% if (isThereStuff == true) { %>
-      .button.separator
+      .button-separator
       .button.edit title="Edit" &nbsp;
       .button.rename title="Rename" &nbsp;
       .button.delete title="Delete" &nbsp;
