--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -467,23 +467,29 @@ div.wysiwyg ul.toolbar {
   font-size: 150%;
   word-wrap: break-word; }
 
+#builder .edit-area.category .controls, #builder .edit-area.page_tree .controls {
+  border: 1px solid #b3b3b3;
+  padding: 3px;
+  background: silver; }
 #builder .edit-area.category .controls .button, #builder .edit-area.page_tree .controls .button {
   height: 22px;
   padding: 6px 6px 0 24px;
-  margin: 0 4px 8px 0;
-  border: 1px solid #b3b3b3;
+  margin: 0 4px 0 0;
   background: url(/images/ui/plus.png) 3px 5px no-repeat;
   float: left;
   cursor: pointer; }
   #builder .edit-area.category .controls .button:empty, #builder .edit-area.page_tree .controls .button:empty {
-    padding-left: 16px;
+    padding-left: 24px;
     background-position: 50% 50%; }
 #builder .edit-area.category .controls .button:hover, #builder .edit-area.page_tree .controls .button:hover {
-  border-color: #324774; }
+  border: 1px outset #e0e0e0;
+  margin: -1px 3px -4px -1px; }
 #builder .edit-area.category .button.back, #builder .edit-area.page_tree .button.back {
   background-image: url(/images/ui/back-btn.png); }
-#builder .edit-area.category .button.separator, #builder .edit-area.page_tree .button.separator {
-  margin-top: 1px;
+#builder .edit-area.category .button-separator, #builder .edit-area.page_tree .button-separator {
+  float: left;
+  height: 22px;
+  margin: -1px 4px 0 0;
   padding: 3px 1px;
   border: none;
   background: gray; }
