Made tel: links physical instead of js activated. Addresses #172
The tel: protocol is not properly supported in all browsers, so
we have to resort to handling this special case in a rather
inelegant manner.

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -40,7 +40,9 @@ window.g = {
   },
 <%- end %>
 
-  noPhotoPath: '/images/no-wphoto.png'
+  noPhotoPath: '/images/no-wphoto.png',
+  isPreview: <%= @is_preview_mode.present? %>,
+  isBuilder: <%= @is_builder.present? %>
 };
 window.widgetClasses = {};
 window.widgetPages = {};
