--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -225,6 +225,7 @@ p {
   float: left;
   width: 25%;
   height: 102px;
+  a { color: #000; text-decoration: none; }
   .inner {
     padding: 7.5px 5.5px 7.5px 5.5px; }
   .icon {
