--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -9,7 +9,8 @@ window.g = {
   couchLocation: '<%=escape_javascript @company.couch_host %>',
   db_name: '<%=escape_javascript @company.db_name %>',
   company: '<%=escape_javascript @company.name %>',
-  isPreview: <%= @is_preview_mode.present? %>
+  isPreview: <%= @is_preview_mode.present? %>,
+  isBuilder: <%= @is_builder.present? %>
 };
 window.widgetClasses = {};
 window.widgetPages = {};
