--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -42,7 +42,8 @@ window.g = {
 
   noPhotoPath: '/images/no-wphoto.png',
   isPreview: <%= @is_preview_mode.present? %>,
-  isBuilder: <%= @is_builder.present? %>
+  isBuilder: <%= @is_builder.present? %>,
+  isIPad: navigator.userAgent.match(/iPad/i) != null
 };
 window.widgetClasses = {};
 window.widgetPages = {};
