--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -10,7 +10,8 @@ window.g = {
   db_name: '<%=escape_javascript @company.db_name %>',
   company: '<%=escape_javascript @company.name %>',
   isPreview: <%= @is_preview_mode.present? %>,
-  isBuilder: <%= @is_builder.present? %>
+  isBuilder: <%= @is_builder.present? %>,
+  isIPad: navigator.userAgent.match(/iPad/i) != null
 };
 window.widgetClasses = {};
 window.widgetPages = {};
