Updated the work-around for phone page for tablets
Renamed it from isIPad to isTablet to make it more generic. Added the
Kindle to the list. Added a tablets list to mobile_helper.rb similar to
the mobile_devices list.

--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -11,7 +11,7 @@ window.g = {
   company: '<%=escape_javascript @company.name %>',
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
-  isIPad: navigator.userAgent.match(/iPad/i) != null
+  isTablet: navigator.userAgent.match(/ipad|kindle/i) != null
 };
 window.widgetClasses = {};
 window.widgetPages = {};
