--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -43,7 +43,7 @@ window.g = {
   noPhotoPath: '/images/no-wphoto.png',
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
-  isIPad: navigator.userAgent.match(/iPad/i) != null
+  isTablet: navigator.userAgent.match(/ipad|kindle/i) != null
 };
 window.widgetClasses = {};
 window.widgetPages = {};
