--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -167,15 +167,16 @@ div.wysiwyg ul.toolbar {
     font-weight: bold;
     font-size: 18px;
     padding: 0px;
-    margin: 15px 0px 20px 0px;
+    margin: 15px 0px 3px 0px;
   }
-  .first {
-    margin-left: -2px;
-  }
+  p.help-text { margin-bottom: 20px; }
+  p { margin-bottom: 5px; }
+  img { border: 2px solid #203360; }
+  .first {  margin-left: -2px; }
   .or {
     font-size: 18px;
     font-weight: bold;
-    margin: 25px 0px 25px 0px;
+    margin: 8px 0px 8px 0px;
     padding: 10px 0px 10px 0px;
     text-align: center;
     table {
