--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -8,6 +8,7 @@ window.g = {
   couchLocation: '<%=escape_javascript @company.couch_host %>',
   db_name: '<%=escape_javascript @company.db_name %>',
   company: "<%=escape_javascript @company.name %>",
+  slogan: "<%=escape_javascript @company.settings.slogan %>",
   id_counter: <%=@company.id_counter %>,
   userEmails: {
     yomobi: "<%=escape_javascript @company.user.email %>",
