--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -132,6 +132,9 @@ p {
     padding-left: 8px;
     font-size: 18px;
     font-weight: bold; }
+  .company-info .slogan {
+    padding-left: 8px;
+    font-style: italic; }
 
 .tab-bar {
   background: #c4cde0;
