--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -385,7 +385,7 @@ div.wysiwyg ul.toolbar {
     }
   }
   .site-settings {
-    input[type=text] {
+    input[type=text], textarea {
       width: 240px;
     }
   }
@@ -805,7 +805,7 @@ div.wysiwyg ul.toolbar {
 // override mobile styling
 #mobile-container {
   .company-info {
-    .name, .logo { cursor: pointer; }
+    .name, .logo, .slogan { cursor: pointer; }
   }
   .page .content.category, .page .content.page_tree {
     .item:hover {
