--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -9,6 +9,7 @@ window.g = {
   couchLocation: '<%=escape_javascript @company.couch_host %>',
   db_name: '<%=escape_javascript @company.db_name %>',
   company: '<%=escape_javascript @company.name %>',
+  slogan: "<%=escape_javascript @company.settings.slogan %>",
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
   isTablet: navigator.userAgent.match(/ipad|kindle/i) != null
